// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimplePagination /> should match snapshot for hasNext 1`] = `
<nav
  aria-label="pagination"
  class="base block pagination"
>
  <button
    aria-label="previous page"
    class="base appearance button none_mobile_base 3_mobile_base none_mobile_base 3_mobile_base display_inline-block border_style none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base root_base themedButton_base variant_secondary_base size_small_default_base size_small_rounded_base size_small_iconOnly_base disabled width_default pagination chevron_default_base chevron_disabled_base"
    disabled=""
    type="button"
  >
    <div
      class="body_base"
    >
      <i
        class="base display_block icon_default_base medium_mobile_base"
      >
        <svg
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
          />
        </svg>
      </i>
    </div>
  </button>
  <button
    aria-label="next page"
    class="base appearance button none_mobile_base 3_mobile_base none_mobile_base 3_mobile_base display_inline-block border_style none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base root_base themedButton_base defaultStates_secondary_base variant_secondary_base size_small_default_base size_small_rounded_base size_small_iconOnly_base enabled width_default pagination chevron_default_base"
    type="button"
  >
    <div
      class="body_base"
    >
      <i
        class="base display_block icon_default_base medium_mobile_base"
      >
        <svg
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
          />
        </svg>
      </i>
    </div>
  </button>
</nav>
`;

exports[`<SimplePagination /> should match snapshot for hasNext and hasPrevious 1`] = `
<nav
  aria-label="pagination"
  class="base block pagination"
>
  <button
    aria-label="previous page"
    class="base appearance button none_mobile_base 3_mobile_base none_mobile_base 3_mobile_base display_inline-block border_style none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base root_base themedButton_base defaultStates_secondary_base variant_secondary_base size_small_default_base size_small_rounded_base size_small_iconOnly_base enabled width_default pagination chevron_default_base"
    type="button"
  >
    <div
      class="body_base"
    >
      <i
        class="base display_block icon_default_base medium_mobile_base"
      >
        <svg
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
          />
        </svg>
      </i>
    </div>
  </button>
  <button
    aria-label="next page"
    class="base appearance button none_mobile_base 3_mobile_base none_mobile_base 3_mobile_base display_inline-block border_style none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base root_base themedButton_base defaultStates_secondary_base variant_secondary_base size_small_default_base size_small_rounded_base size_small_iconOnly_base enabled width_default pagination chevron_default_base"
    type="button"
  >
    <div
      class="body_base"
    >
      <i
        class="base display_block icon_default_base medium_mobile_base"
      >
        <svg
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
          />
        </svg>
      </i>
    </div>
  </button>
</nav>
`;

exports[`<SimplePagination /> should match snapshot for hasPrevious 1`] = `
<nav
  aria-label="pagination"
  class="base block pagination"
>
  <button
    aria-label="previous page"
    class="base appearance button none_mobile_base 3_mobile_base none_mobile_base 3_mobile_base display_inline-block border_style none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base root_base themedButton_base defaultStates_secondary_base variant_secondary_base size_small_default_base size_small_rounded_base size_small_iconOnly_base enabled width_default pagination chevron_default_base"
    type="button"
  >
    <div
      class="body_base"
    >
      <i
        class="base display_block icon_default_base medium_mobile_base"
      >
        <svg
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
          />
        </svg>
      </i>
    </div>
  </button>
  <button
    aria-label="next page"
    class="base appearance button none_mobile_base 3_mobile_base none_mobile_base 3_mobile_base display_inline-block border_style none_mobile_base none_mobile_base none_mobile_base none_mobile_base pill_mobile_base root_base themedButton_base variant_secondary_base size_small_default_base size_small_rounded_base size_small_iconOnly_base disabled width_default pagination chevron_default_base chevron_disabled_base"
    disabled=""
    type="button"
  >
    <div
      class="body_base"
    >
      <i
        class="base display_block icon_default_base medium_mobile_base"
      >
        <svg
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
          />
        </svg>
      </i>
    </div>
  </button>
</nav>
`;
